@@ -128,7 +128,7 @@ Item								   Prio Status
     - Create the core of the filter					done
     - Create the import dialog						done
     - Import the data from the dialog					--
-    - Disable when inside KSpread					--
+    - Disable when inside KSpread					done
     - Remove some data types from the chooser (not relevant for KChart) --
 
 * KDChart
